[package]
authors = ["Peter Mezei <mezeipetister@gmail.com>"]
edition = "2018"
name = "purchase_microservice"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
packman = "*"
serde = {version = "1.0", features = ["derive"]}
uuid = {version = "0.8", features = ["serde", "v4"]}
